css stylings fixed: thumbnail images are masked to fit on larger screens, and 'add trip' thumbnail's description is centered incase of overlapping on smaller screens

--- a/src/app/trips/new-trip-thumbnail.component.css
+++ b/src/app/trips/new-trip-thumbnail.component.css
@@ -83,6 +83,8 @@
       font-style: italic;
       font-size: 2.4rem;
       opacity: 0.0;
+      text-align: center;
+      margin: 0px 10px;
     }
     .thumbnail_box:hover .description {
       opacity: 1;
