--- a/src/app/trips/trip-thumbnail.component.css
+++ b/src/app/trips/trip-thumbnail.component.css
@@ -43,6 +43,8 @@
     z-index:-5;
     position: absolute;
     min-height: 450px;
+    width: 100%;
+    height: auto;
     opacity: 1.0;
   }
   .thumbnail_box:hover .bg-img {
